argocd/applications/rune/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rune
spec:
  selector:
    app.kubernetes.io/name: rune
  ports:
    - name: http
      port: 8080
      targetPort: http
