argocd/applications/rune/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rune-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rune
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bayn
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: rune
      ports:
        - protocol: TCP
          port: 8080
